# patinox

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.claude/: settings.local.json
.claude/commands/: README.md  apply-recommendations.md  checklist.md  groom.md  implement.md  next.md  plan.md  pr-prep.md  review-tests.md  status.md  sync.md
.devcontainer/: claude-mcp.md  devcontainer.json
.github/workflows/: ci.yml
archive/: README.md
archive/tests-v1-enterprise/: anthropic_provider_test.rs  local_provider_streaming_test.rs
context-network/: CHANGELOG.md
context-network/archive/: RustLLMAgentFrameworkResearch.md
context-network/backlog/: MIGRATION-STATUS.md  QUICKSTART.md  README.md
context-network/components/: memory-management-index.md
context-network/connections/: dependencies.md  index.md  interfaces.md
context-network/decisions/: CRITICAL_NO_CODING_YET.md  architectural_decisions_resolved.md  backlog-structure-migration-2025-10-12.md  begin_coding_decision.md  index.md  lifecycle-hook-architecture.md  telemetry_debugging_approach.md  v2_strategic_reset.md
context-network/discoveries/: 2025-09-15-testing-utility-patterns.md  tower-validation-claude-review-2025-09-15.md
context-network/discovery/: 2025-01-18-001-test-quality-patterns.md  2025-01-20-001-async-drop-pattern.md  2025-01-20-002-priority-queue-cleanup.md  2025-01-20-003-tdd-async-workflow.md  2025-08-19-001-tautological-vs-mock-testing.md  2025-08-19-002-type-safety-tdd-implementation.md  2025-08-23-001-local-provider-integration-patterns.md  (+1 more)
examples/: custom_plugin.rs  doc_generator.rs  file_processor.rs  hello_agent.rs  lifecycle_hooks.rs  tool_context_guide.rs  typestate_examples.rs
examples-v1-enterprise/: typestate_examples.rs
inbox/: agent-ai-memory-observations.md  cognitive-interceptor-whitepaper.md  decision-approval-system.md  embodied-ai-research.md  notes.md  rust-agent-cargo.txt  rust-agent-example.rs  rust-agent-framework-readme.md  rust-agent-framework.md  rust-agent-readme.md
inbox/archive/: notes.md  (+1 more)
scripts/: ci-local.sh
src/: README.md  agent.rs  builder.rs  cli.rs  lib.rs  lifecycle.rs  provider.rs  tool.rs  typestate.rs
src-v1-enterprise/: builder.rs  error.rs
tasks/: README.md
tests/: anthropic_provider_test.rs  local_provider_config_test.rs  local_provider_streaming_test.rs  local_provider_test.rs  memory_integration_test.rs  openrouter_provider_test.rs  project_structure_test.rs  provider_integration_test.rs  provider_test_utils_demo.rs  provider_test_utils_test.rs  real_http_streaming_test.rs  registry_integration_test.rs  resource_management_test.rs  streaming_memory_optimization_test.rs  validation_integration_test.rs
tests-v1-enterprise/: lmstudio_provider_mock_tests.rs  project_structure_test.rs  provider_integration_test.rs  real_http_streaming_test.rs  streaming_memory_optimization_test.rs  validation_integration_test.rs
(+377 files in other folders)
